Intro-to-k8s-LFS158/Deploy-App/Deploy-Ingress/ingress-vh-web.yaml
# Name-Based Virtual Hosting Ingress definition
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: virtual-host-ingress
  namespace: k8stutorial
spec:
  ingressClassName: nginx
  rules:
  - host: blue.example.com
    http:
      paths:
      - backend:
          service:
            name: blue-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: green.example.com
    http:
      paths:
      - backend:
          service:
            name: green-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
